# cpp_basic

./: CMakeLists.txt  WIKI.md  a.out  basics.cpp  dataTypes  data_structure  data_structure.cpp  exception.cpp  functions.cpp  pointers.cpp  signals.cpp  stream.cpp  type_erasure.cpp  type_erasure_idioms.cpp  type_erasure_proxy.cpp  variadic.cpp
classes/: a.out  basics.cpp  polymorphism.cpp  template.cpp
dynamic_programming/: CMakeLists.txt  levenshtein_distance.cpp  longest_common_sequence.cpp  longest_increasing_subsequence.cpp  longest_prefix_matching.cpp  shortest_common_supersequence.cpp
file/: a.out  basics.cpp  parser.cpp
ipc/: CMakeLists.txt  a.out  message_queue.cpp  pipe_fork.cpp  process  process.cpp  process_exec  process_exec.cpp  shared_mem.hpp  shared_mem_consumer.cpp  shared_mem_producer.cpp  signal_event.cpp  signal_receive.cpp
multithread/: CMakeLists.txt  multithread.cpp  posix_class.cpp  posix_semaphore.cpp  posix_thread  posix_thread.cpp  process.cpp
stdlib/: CMakeLists.txt  algorithm.cpp  file_in.txt  file_out.txt  sorting.cpp  stream.cpp  test_app.cpp
timer/: CMakeLists.txt  pulse.cpp  siginfo.h  timer_signal.cpp
